--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Countdown Timer</title>
+  <title>Project H</title>
   <link rel="stylesheet" href="./style.css">
   <link href='https://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
 
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <h1 id="head"></h1>
+  <h1 id="head">Project H starts in:</h1>
   <ul>
     <li><span id="days"></span>days</li>
     <li><span id="hours"></span>Hours</li>
