--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <h1 id="head">Project H starts in</h1>
+  <h1 id="head">Project H - Part 1 - starts in</h1>
   <ul>
     <li><span id="days"></span>days</li>
     <li><span id="hours"></span>Hours</li>
