--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 </head>
 <body>
+  <audio autoplay height="0" width="0" loop>
+       <source src="./WeddingMarch.mp3" type="audio/mpeg">
+   </audio>
 <!-- partial:index.partial.html -->
 <div class="container">
   <h1 id="head">Project H - Part 1 - starts in</h1>
