--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
    </audio>
 <!-- partial:index.partial.html -->
 <div class="container">
-  <h1 id="head">Project H - Part 1 - starts in</h1>
+  <h1 id="head">Project H - Part 1 - startet in</h1>
   <ul>
-    <li><span id="days"></span>days</li>
-    <li><span id="hours"></span>Hours</li>
-    <li><span id="minutes"></span>Minutes</li>
-    <li><span id="seconds"></span>Seconds</li>
+    <li><span id="days"></span>Tagen</li>
+    <li><span id="hours"></span>Stunden</li>
+    <li><span id="minutes"></span>Minuten</li>
+    <li><span id="seconds"></span>Sekunden</li>
   </ul>
 </div>
 <!-- partial -->
