--- a/f_test.html
+++ b/f_test.html
@@ -14,7 +14,7 @@
   <p>Diese Fragen sind essenziell für ProjectH Teil 2 !</p>
   <p>Ich bin:</p>
 <div id="button">
-<a href="/C:/PROJECTH TEST/QUIZ/Formular/quiz_yvi.html" class="button">Yvi</button>
+<a href="/ProjectH1/Formular/quiz_yvi.html" class="button">Yvi</button>
 <a href="/C:/PROJECTH TEST/QUIZ/Formular/quiz_lars.html" class="button button2">Lars</button>
 </body>
 
