--- a/Formular/quiz_lars.html
+++ b/Formular/quiz_lars.html
@@ -10,7 +10,7 @@
   <div id="headline">
     <h1 class="h1">Hochzeitsquiz</h1>
     PLAYER<p class="headerplayer">LARS</p>
-  <form action="action_page.php" method="post" >
+  <form action="action_page.php" name="Quiz" method="post" data-netlify="true">
 
     Wie habt ihr euch kennengelernt?<br> <textarea autocomplete="off" class="answer_field" name="met_how" rows="5" cols="30"></textarea>
     <p>Seit wie vielen Jahren seit ihr nun zusammen?
