--- a/Formular/quiz_lars.html
+++ b/Formular/quiz_lars.html
@@ -16,7 +16,7 @@
     <p>Seit wie vielen Jahren seit ihr nun zusammen?
     <p><input type="number" name="time_tght" class="inputfeld inputfeldnumber" autocomplete="off">
       <p>Was liebst du an Yvi am meisten?
-      <p> <textarea class="answer_field" name="love_most" rows="5" cols="30" autocomplete="off"></textarea>
+      <p> <textarea class="answer_field" name="love_most" autocomplete="off"></textarea>
         <p>Welches Wort würde Yvi am besten beschreiben?
         <p><input type="text" name="best_desc" class="inputfeld" autocomplete="off">
           <p>Wenn die Welt untergehen würde, was würde Yvi als erstes retten?
