--- a/Formular/quiz_yvi.html
+++ b/Formular/quiz_yvi.html
@@ -9,7 +9,7 @@
 <body>
   <div id="headline">
     <h1 class="h1">Hochzeitsquiz</h1>
-    PLAYER<p class="headerplayer">Lars</p>
+    PLAYER<p class="headerplayer">Yvi</p>
   <form  name="Quiz_Yvi" method="POST" data-netlify="true" action="fertig.html">
 
     Wie habt ihr euch kennengelernt?<br> <textarea autocomplete="off" class="answer_field" name="met_how" rows="5" cols="30"></textarea>
