--- a/Formular/quiz_yvi.html
+++ b/Formular/quiz_yvi.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="quiz_style.css">
   <link href='https://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+  <script type="text/javascript">
+        window.history.forward();
+        function noBack() {
+            window.history.forward();
+        }
+    </script> 
 </head>
 
 <body>
