--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-<link href='https://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
-<meta charset="utf-8">
-<title>QUIZ</title>
+  <meta charset="UTF-8">
+  <title>DONE...</title>
+  <link rel="stylesheet" type="text/css" href="fertigCSS.css">
+  <link href='https://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div id="headline">
-  <h1>Hochzeitsquiz</h1>
-  <p>Diese Fragen sind essenziell für ProjectH Teil 2 !</p>
-  <p>Ich bin:</p>
-<div id="button">
-<a href="/Formular/quiz_yvi.html" class="button">Yvi</button>
-<a href="/Formular/quiz_lars.html" class="button button2">Lars</button>
-</body>
+<p class="loading">REBOOTING</p>
 
+</body>
 </html>
